# cmake-lib-example

./: CMakeLists.txt  README.mkd
bar/: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt
foo/inc/: Foo.h
foo/src/: Foo.cpp
